@@ -234,7 +234,7 @@ See also: STRINGS
   convsecs()    convutcsecs() convtime()    convutctime() ctime()
   etimefmt()    isdaylight()  mtime()       restarttime() secs()
   starttime()   stringsecs()  time()        timefmt()     timestring()
-  utctime()
+  utctime()     uptime()
 
 & Utility functions
   These functions don't quite fit into any other category.
@@ -250,7 +250,7 @@ See also: STRINGS
   set()         setq()        setr()        slev()        soundex()     
   soundslike()  speak()       stext()       tag()         tagwrap()      
   tel()         testlock()    textentries() textfile()    unsetq()      
-  valid()       wipe()        @@()
+  valid()       wipe()        @@()          uptime()
 & @@()
 & NULL()
   @@(<expression>)
@@ -6085,3 +6085,21 @@ See also: ufun(), get(), zone(), zemit(), zwho(), ZONES
   to <new zone> first.
   
 See also: @chzone, zfun(), zwho(), zemit() ZONES
+& UPTIME()
+  UPTIME([<type>])
+  
+  This function returns the time, as a number of seconds, that something
+  happend (or will happen). Exactly what is returned depends on the given
+  <type>, which should be one of:
+  
+    upsince   - The time the MUSH was started.
+    reboot    - The time the MUSH was last rebooted.
+    save      - The time the MUSH last saved, or -1 if it hasn't.
+    nextsave  - The time of the next automatic save.
+    dbck      - The time of the next automatic dbck.
+    purge     - The time of the next automatic purge.
+    warnings  - The time of the next automatic warnings check, or -1 if
+                automated warnings are disabled.
+                 
+See also: @uptime, secs(), convsecs(), time(), starttime(), restarttime(), 
+  restarts(), @dbck, @purge, @warnings, @config, @dump, @shutdown
